fixed EMBL dropdown z-index issues

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -20,7 +20,7 @@
   left: 0;
   right: 0;
   height: 238px;/*magic --- SP for what use ?*/
-  /*z-index: 3;*//*SP removed z-index as it clashes with popup top EBI button-if needed needs to be more specific to each individual div (global-masthead and masthead )*/
+  z-index: 3;
 }
 
 .local_masthead {
